fix: Event of missing SGBackupConfig is sent even if backup is working as expected